--- a/_posts/2014-12-09-test-post.md
+++ b/_posts/2014-12-09-test-post.md
@@ -2,4 +2,6 @@
 published: false
 ---
 
-some content to go in a test post
+## A New Post
+
+Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
