--- a/_posts/2014-12-09-test-post.md
+++ b/_posts/2014-12-09-test-post.md
@@ -8,4 +8,5 @@ categories: jekyll update
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
 
-![alt text for image](/media/Nov2013_Cover.jpeg)
+![test alt text](/media/March2010_eCard_InsideCover.jpg)
+
