--- a/_posts/2014-12-09-test-post.md
+++ b/_posts/2014-12-09-test-post.md
@@ -1,7 +1,11 @@
 ---
-published: true
 layout: post
+category: blog
+published: true
 categories: jekyll update
+title: Untitled
+tags: 
+  - mangos
 ---
 
 ## A New Post
@@ -9,3 +13,4 @@ categories: jekyll update
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
 
 ![test alt text](/jekyll/media/March2010_eCard_InsideCover.jpg)
+
