--- a/_posts/2014-12-09-test-post.md
+++ b/_posts/2014-12-09-test-post.md
@@ -3,7 +3,7 @@ layout: post
 category: blog
 published: true
 categories: jekyll update
-title: Untitled
+title: "test-post"
 tags: 
   - mangos
 ---
